--- a/index/id.html
+++ b/index/id.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>photograph</title>
 	<style>
 		.active{
 			background:rgb(255,128,0);
